@@ -35,8 +35,8 @@ class WordParserTest {
         var docs = parser.parse(file.toString(), "docx-1", null, Map.of());
 
         assertEquals(1, docs.size());
-        assertTrue(docs.getFirst().getText().contains("Paragraph 1"));
-        assertTrue(docs.getFirst().getText().contains("Paragraph 2"));
+        assertTrue(docs.get(0).getText().contains("Paragraph 1"));
+        assertTrue(docs.get(0).getText().contains("Paragraph 2"));
     }
 
     @Test
