@@ -57,7 +57,7 @@ class ChatRerankerTest {
                 2);
 
         assertEquals(2, results.size());
-        assertEquals("candidate one", results.getFirst().getText());
+        assertEquals("candidate one", results.get(0).getText());
         assertEquals(results.get(0).getScore(), results.get(1).getScore(), 1e-6);
     }
 
